# lago_mago

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  script_diagnostico.py  sript_tes.py
.db/: conexao.py
data/: sparktest.py
data/raw/: sample_data.parquet
lago_dados/.jupyter/lab/workspaces/: auto-g-1261.jupyterlab-workspace
lago_dados/.local/share/jupyter/runtime/: jupyter_cookie_secret
src/: gerar_parquet.py
src/bronze/: ingestao.ipynb
