[project]
name = "lago-dados"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Soares Ferreira",email = "victorsoaresferreiradev09@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (>=4.0.0,<5.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "faker (>=37.5.3,<38.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "findspark (>=2.0.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "lago_dados", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
